--- a/src/page/Admin/Admin.module.css
+++ b/src/page/Admin/Admin.module.css
@@ -47,3 +47,121 @@
   justify-content: center;
   align-items: center;
 }
+.orders {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  grid-gap: 5rem;
+}
+table {
+  border: 1px solid #ccc;
+  border-collapse: collapse;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
+table caption {
+  font-size: 3em;
+  margin: 0.5em 0 0.75em;
+}
+
+table tr {
+  background-color: #f8f8f8;
+  border: 1px solid #ddd;
+  padding: 0.35em;
+}
+
+table th,
+table td {
+  padding: 0.625em;
+  text-align: center;
+}
+
+table th {
+  font-size: 1.3em;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+}
+table td {
+  font-size: 1.2em;
+}
+
+@media screen and (max-width: 600px) {
+  table {
+    border: 0;
+  }
+
+  table caption {
+    font-size: 1.3em;
+  }
+
+  table thead {
+    border: none;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+  }
+
+  table tr {
+    border-bottom: 3px solid #ddd;
+    display: block;
+    margin-bottom: 0.625em;
+  }
+
+  table td {
+    border-bottom: 1px solid #ddd;
+    display: block;
+    font-size: 0.8em;
+    text-align: right;
+  }
+
+  table td::before {
+    /*
+    * aria-label has no advantage, it won't be read inside a table
+    content: attr(aria-label);
+    */
+    content: attr(data-label);
+    float: left;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+
+  table td:last-child {
+    border-bottom: 0;
+  }
+}
+
+.filter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  grid-gap: 20px;
+}
+.filterItem {
+  display: flex;
+  grid-gap: 20px;
+}
+.checkbox {
+  width: 2rem;
+  height: 2rem;
+}
+.filterInput {
+  width: 25rem;
+  height: 5rem;
+  font-size: 2rem;
+  padding: 1rem;
+  border: 3px solid black;
+  border-radius: 5px;
+}
+label {
+  font-size: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  grid-gap: 2rem;
+}
