--- a/src/page/Admin/createRooms/CreateRooms.module.css
+++ b/src/page/Admin/createRooms/CreateRooms.module.css
@@ -73,3 +73,14 @@
   border: 2px solid #f59c33;
   transition: all 0.4s ease-in-out;
 }
+.weekDaysContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  grid-gap: 20px;
+  font-size: 20px;
+}
+.weekDaysCheckbox {
+  width: 20px;
+  height: 20px;
+}
