--- a/src/page/Booking/modal/Modal.module.css
+++ b/src/page/Booking/modal/Modal.module.css
@@ -37,3 +37,26 @@
   display: flex;
   align-items: center;
 }
+@media (max-width: 400px) {
+  .modalContainer h2 {
+    font-size: 1.5rem;
+  }
+  .modalTextarea {
+    width: 27rem;
+    border: 2px solid black;
+    height: 10rem;
+    border-radius: 15px;
+    font-size: 1.5rem;
+    padding: 2rem;
+    display: flex;
+    align-items: center;
+  }
+  .modalInput {
+    width: 27rem;
+    border: 2px solid black;
+    height: 3rem;
+    border-radius: 15px;
+    font-size: 1.5rem;
+    padding: 2rem;
+  }
+}
