--- a/src/page/Booking/Booking.module.css
+++ b/src/page/Booking/Booking.module.css
@@ -33,7 +33,7 @@
 .orderInfo {
   width: 100%;
   padding: 2rem;
-  border: 2px solid black;
+  border: 2px solid #3b90fb;
   border-radius: 1.4rem;
 }
 .orderInfo div {
@@ -44,12 +44,19 @@
   font-weight: 700;
   font-size: 20px;
   padding-bottom: 2.5rem;
-  color: black;
+  color: #555;
 }
 .orderInfo p {
   font-size: 18px;
   padding-bottom: 1.5rem;
   margin-bottom: 4rem;
+  color: #555;
+}
+.orderButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  grid-gap: 3rem;
 }
 @media (max-width: 1000px) {
   .bookingContainer {
@@ -73,6 +80,15 @@
 @media (max-width: 750px) {
   .orderBlockImg {
     width: 40rem;
+  }
+  .orderButton {
+    flex-direction: column;
+    grid-gap: 0.5rem;
+  }
+  .orderButton button {
+    width: 17rem;
+    height: 4rem;
+    font-size: 1.5rem;
   }
 }
 @media (max-width: 500px) {
