--- a/src/page/Booking/modal/Modal.module.css
+++ b/src/page/Booking/modal/Modal.module.css
@@ -1,16 +1,19 @@
 .bookButton {
-  padding: 12px 24px;
-  background-color: #4caf50;
+  width: 24rem;
+  height: 6rem;
+  border: none;
+  color: #fff;
+  border-radius: 0.5rem;
+  font-size: 2rem;
+  background-color: #3b90fb !important;
   color: white;
   border: none;
-  border-radius: 25px;
   cursor: pointer;
-  font-size: 16px;
   transition: background-color 0.3s ease;
 }
 
 .bookButton:hover {
-  background-color: #45a049;
+  background-color: #3b90fb !important;
 }
 
 .modalTitle {
@@ -49,7 +52,7 @@
 .input:focus,
 .textarea:focus {
   outline: none;
-  border-color: #4caf50;
+  border-color: #3b90fb;
 }
 
 .textarea {
@@ -65,16 +68,16 @@
 
 .submitButton {
   padding: 12px 24px;
-  color: black;
+  color: white;
   border: none;
-  border-radius: 25px;
+  border-radius: 0.5rem;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 1.7rem;
   align-self: center;
   transition: background-color 0.3s ease;
 }
 .submitButton {
-  background: #45a049 !important;
+  background: #3b90fb !important;
 }
 
 @media (max-width: 600px) {
