--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -1,10 +1,23 @@
+.footerContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+
 .footer {
+  margin-top: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
+}
+
+.footer {
   height: 10rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 30rem 5rem 10rem 5rem;
 }
 .footerContent {
   display: flex;
@@ -16,6 +29,7 @@
 .footerContent h2 {
   color: #3b90fb;
   font-size: 3rem;
+  font-weight: bold;
 }
 .footerContent a {
   display: flex;
@@ -26,6 +40,18 @@
 .logo {
   font-size: 4rem;
   color: #3b90fb;
-  font-weight: 400;
+  font-weight: bold;
   line-height: 2.25rem;
+}
+
+@media (min-width: 768px) {
+  .footer {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .footerContent {
+    margin: 0 20px;
+    text-align: left;
+  }
 }
