--- a/src/page/Booking/Booking.module.css
+++ b/src/page/Booking/Booking.module.css
@@ -1,6 +1,8 @@
 .Booking {
   width: 100%;
+  padding: 2rem 0;
 }
+
 .bookingContainer {
   width: 100%;
   margin: auto;
@@ -95,4 +97,73 @@
   .orderBlockImg {
     width: 30rem;
   }
+}
+
+.RoomCard {
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  overflow: hidden;
+  background-color: #f8f9fa;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.RoomCard .card-body {
+  padding: 1.5rem;
+}
+
+.RoomCard .card-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #343a40;
+}
+
+.RoomCard .card-subtitle {
+  font-size: 1rem;
+  color: #6c757d;
+  margin-bottom: 1rem;
+}
+
+.RoomCard .card-text {
+  font-size: 0.875rem;
+  color: #495057;
+  margin-bottom: 0.5rem;
+}
+
+.RoomCard .d-flex {
+  margin-top: 1rem;
+}
+
+.RoomCard .card-title,
+.RoomCard .card-subtitle,
+.RoomCard .card-text {
+  text-align: left;
+}
+
+.carouselCustom img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Масштабирование изображения, сохраняя пропорции */
+}
+
+@media (min-width: 1024px) {
+  /* Assuming 1024px as the breakpoint for PC */
+  .orderBlockImg .carousel-item img {
+    width: 50rem !important;
+    height: 50rem !important;
+  }
+}
+
+.header {
+  position: relative;
+  z-index: 10; /* Убедитесь, что z-index установлен выше, чем у слайдера */
+}
+
+.orderBlockImg {
+  position: relative;
+  z-index: 1; /* Убедитесь, что z-index установлен правильно */
+}
+
+.orderInfo {
+  position: relative;
+  z-index: 2; /* Убедитесь, что z-index установлен правильно */
 }
