--- a/src/page/Home/Home.module.css
+++ b/src/page/Home/Home.module.css
@@ -22,8 +22,10 @@
   font-weight: 700;
 }
 .contentOne2 img {
-  border-radius: 3.5rem;
+  border-radius: 1.2rem;
   width: 100%;
+  background-size: cover;
+  object-fit: cover;
 }
 .component {
   width: 100%;
@@ -60,8 +62,10 @@
   font-weight: 400;
 }
 .content_component2 img {
-  border-radius: 3.5rem;
+  border-radius: 1.2rem;
   width: 100%;
+  background-size: cover;
+  object-fit: cover;
 }
 .content_component3 {
   display: flex;
@@ -90,8 +94,10 @@
   height: 70rem;
 }
 .content_component4 img {
-  border-radius: 3.5rem;
+  border-radius: 1.2rem;
   width: 100%;
+  background-size: cover;
+  object-fit: cover;
 }
 
 .component3 {
@@ -184,7 +190,9 @@
 }
 .content_component6 img {
   width: 100%;
-  border-radius: 2.5rem;
+  border-radius: 1.2rem;
+  background-size: cover;
+  object-fit: cover;
 }
 
 .Link {
@@ -208,6 +216,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  grid-gap: 15rem;
 }
 .content_component8 div {
   display: flex;
@@ -318,4 +327,20 @@
   .content_component8 img {
     display: none;
   }
+}
+.mapContainer {
+  width: 100%;
+  height: 300px;
+}
+
+@media (max-width: 768px) {
+  .mapContainer {
+    height: 200px;
+  }
+}
+[class*="ymaps-2-1-79-copyright ymaps-2-1-79-copyright_logo"] {
+  display: none !important;
+}
+[class*="ymaps-2-1-79-gototech"] {
+  display: none !important;
 }
