fix header and maps

--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -24,7 +24,7 @@
   justify-content: center;
   align-items: center;
   grid-gap: 2rem;
-  width: 60rem;
+  width: 100%;
 }
 .footerContent h2 {
   color: #3b90fb;
@@ -53,5 +53,6 @@
   .footerContent {
     margin: 0 20px;
     text-align: left;
+    width: 100%;
   }
 }
